--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,8 @@
         <!-- <link rel="stylesheet" href="./style.css"> -->
         <title>Step Counter</title>
     </head>
-    
-
 <body>
     <div id="root"></div>
-
-
-
-    <script src="index.jsx"></script>
+    <script src="index.js"></script>
 </body>
-
 </html>
