--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="vendor/normalize.css">
-        <link rel="stylesheet" href="vendor/bootstrap.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="vendor/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
 
-        <title>Buffering</title>
-    </head>
-<body>
+    <title>Buffering</title>
+  </head>
+  <body>
     <div id="root"></div>
 
-   
-    <script src="vendor/jquery-3.4.0.min.js"></script>
-    <script src="vendor/bootstrap.bundle.js"></script>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
