Popup renders react

--- a/chrome_extension/popup/popup.html
+++ b/chrome_extension/popup/popup.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="type=text/javascript" src="popup.js"></script>
+    <link rel="stylesheet" href="popup.css" />
     <title>Buffering Pop-Up</title>
   </head>
   <body>
     <h1>Hello from the popup</h1>
+    <iframe
+      src="http://localhost:3000/profile"
+      width="100%"
+      height="100%"
+      frameborder="0"
+    >
+    </iframe>
   </body>
 </html>
