--- a/feature-scripts/index.html
+++ b/feature-scripts/index.html
@@ -6,8 +6,8 @@
   <title>Check out this sick chart</title>
 <body>
   <div>
-    <canvas id="myChart" width="200px" height="200px"></canvas>
+    <canvas id="ProgressChart" width="200px" height="200px"></canvas>
   </div>
-<script src="progres-chart.js"></script>
+<script src="progress-chart.js"></script>
 </body>
 </html>
