--- a/chrome_extension/popup/popup.html
+++ b/chrome_extension/popup/popup.html
@@ -10,12 +10,6 @@
   </head>
   <body>
     <h1>Hello from the popup</h1>
-    <iframe
-      src="http://localhost:3000/profile"
-      width="100%"
-      height="100%"
-      frameborder="0"
-    >
-    </iframe>
+    <iframe src="http://localhost:3000/widget" width="100%" height="100%" frameborder="0"> </iframe>
   </body>
 </html>
