--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
-    <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
+   
 
     <title>Buffering</title>
   </head>
@@ -18,5 +18,6 @@
     <div id="root"></div>
 
     <script src="index.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=init"></script>
   </body>
 </html>
