--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="vendor/normalize.css" />
+    <script src="https://apis.google.com/js/platform.js" async defer></script> 
 
     <link
       rel="stylesheet"
@@ -19,6 +20,6 @@
     <div id="root"></div>
 
     <script src="index.js"></script>
-    <script src="https://apis.google.com/js/platform.js?onload=init"></script>
+    
   </body>
 </html>
