--- a/chrome_extension/popup/popup.html
+++ b/chrome_extension/popup/popup.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="type=text/javascript" src="popup.js"></script>
+
     <link rel="stylesheet" href="popup.css" />
     <title>Buffering Pop-Up</title>
   </head>
   <body>
-    <iframe src="http://localhost:3000/widget" width="100%" height="100%" frameborder="0"> </iframe>
+    <!-- <iframe src="http://localhost:3000/widget" width="100%" height="100%" frameborder="0"> </iframe> -->
+    <div id="main">Hello There!</div>
+    <script type="text/javascript" src="popup.js"></script>
   </body>
 </html>
