--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="vendor/normalize.css" />
+    <meta name="google-signin-client_id" content="677038605397-j26crueetoelsf8vh5f9pde9l93707r7.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script> 
 
+    <link rel="stylesheet" href="vendor/normalize.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
