--- a/chrome_extension/popup/popup.html
+++ b/chrome_extension/popup/popup.html
@@ -11,6 +11,7 @@
   <body>
     <!-- <iframe src="http://localhost:3000/widget" width="100%" height="100%" frameborder="0"> </iframe> -->
     <div id="main">Hello There!</div>
+    <script type="text/javascript" src="../content/jquery-3.4.0.min.js"></script>
     <script type="text/javascript" src="popup.js"></script>
   </body>
 </html>
