Add style to newtab, Fix upside-down script inject

--- a/chrome_extension/newtab/newtab.html
+++ b/chrome_extension/newtab/newtab.html
@@ -4,42 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <style>
-      h1 {
-        font-size: 100vh;
-        padding: 0;
-        margin: 0;
-        animation: change2 10s infinite linear;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-      }
-
-      body {
-        background-color: white;
-        animation: change 10s infinite linear;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-      }
-
-      @keyframes change {
-        from {
-          background-color: white;
-        }
-        to {
-          background-color: black;
-        }
-      }
-
-      @keyframes change2 {
-        from {
-          color: black;
-        }
-        to {
-          color: white;
-        }
-      }
-    </style>
-    <title>Buffering</title>
+    <link rel="stylesheet" href="newtab.css" />
+    <title>Buffering: New Tab</title>
   </head>
   <body>
     <marquee scrollamount="50">
