--- a/chrome_extension/popup/popup.html
+++ b/chrome_extension/popup/popup.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
     <link rel="stylesheet" href="popup.css" />
     <title>Buffering Pop-Up</title>
   </head>
   <body>
-    <!-- <iframe src="http://localhost:3000/widget" width="100%" height="100%" frameborder="0"> </iframe> -->
-    <div id="main"></div>
+    <div id="message"></div>
+    <div id="status"></div>
+    <div id="script"></div>
+
     <script type="text/javascript" src="../content/jquery-3.4.0.min.js"></script>
     <script type="text/javascript" src="popup.js"></script>
   </body>
 </html>
+<!-- <iframe src="http://localhost:3000/widget" width="100%" height="100%" frameborder="0"> </iframe> -->
