Add style to popup

--- a/chrome_extension/popup/popup.html
+++ b/chrome_extension/popup/popup.html
@@ -8,9 +8,11 @@
     <title>Buffering Pop-Up</title>
   </head>
   <body>
-    <div id="message"></div>
-    <div id="status"></div>
-    <div id="script"></div>
+    <div id="message">Buffering Status:</div>
+
+    <div id="status"><p id="status-message"></p></div>
+
+    <div id="script"><p id="script-message"></p></div>
 
     <script type="text/javascript" src="../content/jquery-3.4.0.min.js"></script>
     <script type="text/javascript" src="popup.js"></script>
