Small changes to popup

--- a/chrome_extension/popup/popup.html
+++ b/chrome_extension/popup/popup.html
@@ -10,7 +10,9 @@
   <body>
     <div id="message">Buffering Status:</div>
 
-    <div id="status"><p id="status-message"></p></div>
+    <div id="status">
+      <p id="status-message"></p>
+    </div>
 
     <div id="script"><p id="script-message"></p></div>
 
