Implement loading wheel if dom is taking a while to load

--- a/chrome_extension/popup/popup.html
+++ b/chrome_extension/popup/popup.html
@@ -11,7 +11,7 @@
     <div id="message">Buffering Status:</div>
 
     <div id="status">
-      <p id="status-message"></p>
+      <p id="status-message"><img src="../vendor/img/loading.gif" /></p>
     </div>
 
     <div id="script"><p id="script-message"></p></div>
