--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="google-signin-client_id" content="677038605397-j26crueetoelsf8vh5f9pde9l93707r7.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script> 
+    <meta name="google-signin-client_id" content="677038605397-j26crueetoelsf8vh5f9pde9l93707r7.apps.googleusercontent.com" />
+    <meta name="google-site-verification" content="google300f42c4f59acdc3.html" />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <link rel="stylesheet" href="vendor/normalize.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
 
     <title>Buffering</title>
   </head>
@@ -19,6 +17,5 @@
     <div id="root"></div>
 
     <script src="index.js"></script>
-    
   </body>
 </html>
