add google html tag

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="google-signin-client_id" content="677038605397-j26crueetoelsf8vh5f9pde9l93707r7.apps.googleusercontent.com" />
-    <meta name="google-site-verification" content="google300f42c4f59acdc3.html" />
+    <meta name="google-site-verification" content="0lPNVJ3A3R78biD4ZuDDfcDibsRd_UpKJ_aA9KGQgw8" />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <link rel="stylesheet" href="vendor/normalize.css" />
