--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
